<resources>
    <string name="app_name">Talk</string>
    <string name="confirm">CONFIRM</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="discard">DISCARD</string>
    <string name="change">CHANGE</string>
    <string name="reset">REST</string>
    <string name="none">none</string>
    <string name="wait">Please wait&#8230;</string>
    <string name="loading">Loading&#8230;</string>
    <string name="me">Me</string>
    <string name="name">Name</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save_to_local">Save to SDCard</string>
    <string name="favorite">Favorite</string>
    <string name="copy">Copy</string>
    <string name="tag">Tag</string>
    <string name="general">General</string>
    <string name="talk_ai">Talk AI</string>
    <string name="talk_ai_py">talk ai</string>
    <string name="i_know">DONE</string>
    <string name="invite">INVITE</string>
    <string name="not_mention">REMEMBER</string>
    <string name="email">E-Mail</string>
    <string name="auth_failed">Authentication expired. Please sign in again.</string>
    <string name="network_failed">Network failed!</string>
    <string name="update_success">Update Success</string>
    <string name="title_quit_topic">Quit Topic</string>
    <string name="title_delete_topic">Delete Topic</string>
    <string name="title_archive_topic">Archive Topic</string>
    <string name="title_remove_member">Remove Member</string>
    <string name="title_delete_message">Delete message</string>
    <string name="message_delete_message">Are you sure you want to delete this message?</string>
    <string name="title_delete_favorite">Delete favorite</string>
    <string name="message_delete_favorite">Are you sure you want to delete these items?</string>
    <string name="confirm_quit_topic">Are you sure you want to quit this topic?</string>
    <string name="confirm_quit_topic_private">Are you sure you want to quit this topic?</string>
    <string name="confirm_delete_topic">All the chatting history of this conversation will be deleted permanently.</string>
    <string name="confirm_archive_topic">You can restore an archived topic from the bottom section of topic list.</string>
    <string name="confirm_remove_member_from_room">Are you sure to remove this member from this topic?</string>
    <string name="confirm_remove_member_from_team">Are you sure to remove this member from this team?</string>
    <string name="title_quit_team">Quit Current Team</string>
    <string name="confirm_quit_team">Are you sure to quit the current team?</string>
    <string name="new_message">You have new messages</string>
    <string name="input_email">Email address</string>
    <string name="email_has_not_register">This email hasn\'t been registered or already joined</string>
    <string name="name_empty">Name cannot be empty</string>
    <string name="confirm_download">Confirm to download this file</string>
    <string name="file_too_large">This file is larger than 500KB. Are you sure to download with cellular network?</string>
    <string name="download_finish">Download Finish</string>
    <string name="download_finish_message" formatted="false">File has been saved to %s, press confirm to open with a proper app</string>
    <string name="save_finish_message" formatted="false">File has been saved to %s </string>
    <string name="not_support_file_type">File type is not supported currently</string>
    <string name="anonymous_user">Anonymous User</string>
    <string name="take_photo">Take a photo</string>
    <string name="audio_too_short">Audio too short</string>
    <string name="download_file_title">Download &amp; Open</string>
    <string name="download_file_message" formatted="false">Click confirm to download file(%s).</string>
    <string name="favorite_success">Added to Favorites</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="tab_recent">RECENT</string>
    <string name="tab_contact">CONTACTS</string>
    <string name="tab_more">MORE</string>
    <string name="title_select_image">Select Images</string>
    <string name="fab_type_group">Topic</string>
    <string name="fab_type_dms">DMS</string>
    <string name="fab_type_topic">Idea</string>
    <string name="fab_type_file">Picture</string>
    <string name="fab_type_link">Link</string>
    <string name="action_next">Next</string>
    <string name="action_send">Send</string>
    <string name="action_done">Done</string>
    <string name="action_edit">Edit</string>
    <string name="action_search">Search</string>
    <string name="action_call">Add members</string>
    <string name="action_add_member">Archive</string>
    <string name="action_add_topic">Delete</string>
    <string name="action_add_group">Topic settings</string>
    <string name="action_archive_topic">Quit</string>
    <string name="action_delete_topic">Delete</string>
    <string name="action_topic_setting">Topic settings</string>
    <string name="action_story_setting">Settings</string>
    <string name="action_story_edit">Edit</string>
    <string name="action_quit_topic">Quit</string>
    <string name="action_edit_profile">Edit profile</string>
    <string name="action_team_setting">Team settings</string>
    <string name="action_quit_team">Quit this team</string>
    <string name="action_set_admin">Set as admin</string>
    <string name="action_set_normal">Cancel admin</string>
    <string name="action_kick_out">Remove from team</string>
    <string name="action_message">Send message</string>
    <string name="action_delete">Delete</string>
    <string name="action_select_img">Select Image</string>
    <string name="action_delete_story">Delete</string>
    <string name="action_quit_story">Quit</string>
    <string name="action_context">Look at the context</string>
    <string name="recent_welcome_to_talk">Welcome to Talk !</string>
    <string name="recent_welcome_message">Tap the + button on the top right corner\n to invite others or create new topics.</string>
    <string name="recent_general"># General</string>
    <string name="pin_recent">Pin this notification</string>
    <string name="unpin_recent">Unpin this notification</string>
    <string name="hide_recent">Hide this notification</string>
    <string name="mute_recent">Disable notification</string>
    <string name="un_mute_recent">Enable notification</string>
    <string name="title_notification_setting">Notification settings</string>
    <string name="push_on_work_time">Notification duration 8:00 to 22:00</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="only_at_notifications">Only mentions</string>
    <string name="disable_notifications">Disable notifications</string>
    <string name="mobile">Mobile</string>
    <string name="alias_in_team">Alias in the team</string>
    <string name="hide_phone_in_team">Hide phone number in team</string>
    <string name="confirm_discard">Do you want to quit this page without saving changes?</string>
    <string name="title_discard">Discard changes</string>
    <string name="preference_linked_accounts">Linked accounts</string>
    <string name="preference_notify">Notification preferences</string>
    <string name="preference_sign_out">Sign out</string>
    <string name="account_phone">Phone</string>
    <string name="account_teambition">Teambition</string>
    <string name="account_empty">Not bound</string>
    <string name="account_bind">Bind</string>
    <string name="account_unbind">Unbind</string>
    <string name="account_change">Change</string>
    <string name="team">team</string>
    <string name="hint_create_team">Team Name</string>
    <string name="create_team">Create a team</string>
    <string name="create_team_description">Scan QR Code</string>
    <string name="scan_qr_code">Scan to join team</string>
    <string name="scan_qr_code_description">Scan to join team</string>
    <string name="sync_teambition">Sync team from Teambition</string>
    <string name="sync_teambition_description">sync all enterprise member to a new team</string>
    <string name="scan_qr_code_to_join_team">Scan QR Code to join team</string>
    <string name="no_team_error">No team information was found</string>
    <string name="file_type_error">Wrong file type </string>
    <string name="qr_code_refresh_error">Refresh QR Code failed</string>
    <string name="add_member_success">Add member success</string>
    <string name="copied_to_clipboard_and_gowx">Copied to clipboard. Please paste in Wehat</string>
    <string name="wechat_not_installed" >WeChat is not installed</string>
    <string name="wechat">WeChat</string>
    <string name="moment">Moment</string>
    <string name="system_share">Share dialog</string>
    <string name="topic_join">JOIN</string>
    <string name="group_already_joined">Topics Already Joined</string>
    <string name="group_to_join">More Topics to Join</string>
    <string name="group_pinned">Pinned Topics</string>
    <string name="pin_topic">Pin this topic</string>
    <string name="unpin_topic">Unpin this topic</string>
    <string name="create_group">Add a new group</string>
    <string name="create_topic">Create a new topic</string>
    <string name="topic_setting">Topic Setting</string>
    <string name="topic_name">Name</string>
    <string name="topic_goal">Goal</string>
    <string name="topic_visibility">Visibility</string>
    <string name="topic_is_private">Private topic</string>
    <string name="topic_is_mute">Mute</string>
    <string name="topic_is_pin">Pin to top</string>
    <string name="topic_color">Color</string>
    <string name="add_new_members">Invite Members</string>
    <string name="add_from_team">Add Members from this Team</string>
    <string name="title_choose_member">Choose Members</string>
    <string name="topic_private">Only Topic Members</string>
    <string name="topic_public">All Team Members</string>
    <string name="archived_room">View All Archived Topics</string>
    <string name="no_archived_room">No archived topics currently</string>
    <string name="restore_room">Restore Topic</string>
    <string name="restore_room_confirm" formatted="false">Are you sure to restore topic %s ?</string>
    <string name="topic_setting_info">Info</string>
    <string name="topic_setting_setting">Settings</string>
    <string name="topic_setting_member">Members</string>
    <string name="topic_setting_discard">Discard</string>
    <string name="create_topic_name">Topic Name</string>
    <string name="welcome_to_general_talk">Welcome to Talk !</string>
    <string name="message_of_general_talk">This is a general topic\n you can broadcast notices from here</string>
    <string name="welcome_to_public_talk">Hi</string>
    <string name="welcome_to_story_talk">Hi</string>
    <string name="message_of_public_talk" formatted="false">This topic is created by %s on %s\n Tap Setting button on the top right corner\n to configure this topic</string>
    <string name="message_of_story_talk" formatted="false">This idea is shared by %s on %s\n Tap \'Setting\' button on the right of top\n to invite others join this conversation.</string>
    <string name="welcome_to_private_talk">Hi</string>
    <string name="message_of_private_talk">This conversation is private\n and only visible between you two.</string>
    <string name="welcome_to_xiaoai">Hi! It\'s Talk AI!</string>
    <string name="message_of_xiaoai">I\'m the assistant of Talk.\n I\'ll bring you the latest feature as soon as possible.</string>
    <string name="sending">Sending&#8230;</string>
    <string name="uploading">Uploading&#8230;</string>
    <string name="more_items">Message Shelf</string>
    <string name="favorites_items">Favorites</string>
    <string name="addons_items">Extended Apps</string>
    <string name="team_setting_items">Team Settings</string>
    <string name="at_me">\@Me</string>
</resources>