<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_member"
        android:icon="@drawable/ic_add_member_white"
        android:title="@string/action_add_member"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_quit_topic"
        android:title="@string/action_quit_topic"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_archive_topic"
        android:title="@string/action_archive_topic"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_delete_topic"
        android:title="@string/action_delete_topic"
        app:showAsAction="collapseActionView" />
</menu>