<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="collapseActionView|always"
        android:title="@string/action_search" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_send"
        android:icon="@drawable/ic_share"
        android:title="@string/action_send"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_context"
        android:icon="@drawable/ic_locate"
        android:title="@string/action_context"
        android:visible="false"
        app:showAsAction="always"
        />
</menu>