<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/header_private"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="48dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_chat_member" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/welcome_to_private_talk"
            android:textColor="#42000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/message_of_private_talk"
            android:textColor="#42000000"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/header_general"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="48dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_chat_topic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/welcome_to_general_talk"
            android:textColor="#42000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/message_of_general_talk"
            android:textColor="#42000000"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/header_public"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="48dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_chat_topic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/welcome_to_public_talk"
            android:textColor="#42000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_finish_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/message_of_public_talk"
            android:textColor="#42000000"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/header_story"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="48dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_chat_topic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/welcome_to_story_talk"
            android:textColor="#42000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_finish_story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/message_of_story_talk"
            android:textColor="#42000000"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/header_xiaoai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="48dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_hi" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/welcome_to_xiaoai"
            android:textColor="#42000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/message_of_xiaoai"
            android:textColor="#42000000"
            android:textSize="14sp" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/header_loading"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#F1F1F1"
        android:visibility="gone">

        <fr.castorflex.android.circularprogressbar.CircularProgressBar
            android:id="@+id/pull_to_load_more_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            app:cpb_color="?attr/talkColorPrimary" />
    </FrameLayout>
</FrameLayout>